--- a/.github/workflows/show_report_in_comment.yml
+++ b/.github/workflows/show_report_in_comment.yml
@@ -7,6 +7,8 @@ on:
       - 'show_message_in_comment/**'
       - '.github/workflows/show_report_in_comment.yml'
 
+env:
+  FUNCTION_NAME: test_function
 
 jobs:
   unit-test:
@@ -36,6 +38,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Get commit message
         run: git branch --contains
+
+      - name: Echo ${{ env.FUNCTION_NAME }}
+        run: echo ${{ FUNCTION_NAME }}
 
       - uses: actions/setup-python@v2
         with:
