--- a/.github/workflows/show_report_in_comment.yml
+++ b/.github/workflows/show_report_in_comment.yml
@@ -40,7 +40,7 @@ jobs:
         run: git branch --contains
 
       - name: Echo ${{ env.FUNCTION_NAME }}
-        run: echo ${{ FUNCTION_NAME }}
+        run: echo ${FUNCTION_NAME}
 
       - uses: actions/setup-python@v2
         with:
