--- a/.github/workflows/checkout-actions.yml
+++ b/.github/workflows/checkout-actions.yml
@@ -15,9 +15,11 @@ jobs:
         run: |
           echo ::set-env name=COMMIT_MSG::$(git log --format=%B -n 1 --skip 1)
           echo "${COMMIT_MSG}"
+          git log -n 5
 
       - uses: actions/checkout@v2
       - name: Set commit message to an environment variable
         run: |
           echo ::set-env name=COMMIT_MSG::$(git log --format=%B -n 1)
           echo "${COMMIT_MSG}"
+          git log -n 5
