--- a/.github/workflows/checkout-actions.yml
+++ b/.github/workflows/checkout-actions.yml
@@ -4,10 +4,12 @@ on:
   pull_request:
     types: [opened, synchronize]
 
-job:
+jobs:
   test-checkout-action:
     runs-on: ubuntu-latest
     steps:
+      - name: Show work directory
+        run: echo ${GITHUB_WORKSPACE}
       - uses: actions/checkout@v2
         with:
           fetch-depth: 2
@@ -15,9 +17,11 @@ job:
         run: |
           echo ::set-env name=COMMIT_MSG::$(git log --format=%B -n 1 --skip 1)
           echo "${COMMIT_MSG}"
+          git log -n 5
 
       - uses: actions/checkout@v2
       - name: Set commit message to an environment variable
         run: |
           echo ::set-env name=COMMIT_MSG::$(git log --format=%B -n 1)
           echo "${COMMIT_MSG}"
+          git log -n 5
