--- a/.github/workflows/multiple-lines.yml
+++ b/.github/workflows/multiple-lines.yml
@@ -3,7 +3,7 @@ name: test multiple lines
 on:
   pull_request:
     path:
-      - '.github/actions/**'
+      - '.github/actions/multiple_lines.yml'
 
 jobs:
   test-for-multiple-lines:
