--- a/.github/workflows/checkout-actions.yml
+++ b/.github/workflows/checkout-actions.yml
@@ -1,4 +1,4 @@
-name: test-checkout-actions
+name: checkout-actions
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
       - ".github/workflows/checkout-actions.yml"
 
 jobs:
-  test-checkout-action:
+  checkout-action:
     runs-on: ubuntu-latest
     steps:
       - name: Show work directory
@@ -14,15 +14,15 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 2
-      - name: Set commit message to an environment variable
-        run: |
-          echo ::set-env name=COMMIT_MSG::$(git log --format=%B -n 1 --skip 1)
-          echo "${COMMIT_MSG}"
-          git log -n 5
+      # - name: Set commit message to an environment variable
+      #   run: |
+      #     echo ::set-env name=COMMIT_MSG::$(git log --format=%B -n 1 --skip 1)
+      #     echo "${COMMIT_MSG}"
+      #     git log -n 5
 
-      - uses: actions/checkout@v2
-      - name: Set commit message to an environment variable
-        run: |
-          echo ::set-env name=COMMIT_MSG::$(git log --format=%B -n 1)
-          echo "${COMMIT_MSG}"
-          git log -n 5
+      # - uses: actions/checkout@v2
+      # - name: Set commit message to an environment variable
+      #   run: |
+      #     echo ::set-env name=COMMIT_MSG::$(git log --format=%B -n 1)
+      #     echo "${COMMIT_MSG}"
+      #     git log -n 5
