--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,14 @@
 repos:
 - repo: https://github.com/timothycrosley/isort
-  rev: 5.4.1
+  rev: 5.8.0
   hooks:
   - id: isort
 - repo: https://github.com/ambv/black
-  rev: stable
+  rev: 20.8b1
   hooks:
   - id: black
     language_version: python3.8
 - repo: https://gitlab.com/pycqa/flake8
-  rev: 3.8.3
+  rev: 3.9.1
   hooks:
   - id: flake8
