--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           INCOMING_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         with:
-          text: Successfully automated deployment.
+          text: Successfully automated deployment
           attachments: |
             [
               {
@@ -28,10 +28,6 @@ jobs:
                   {
                     "title": "Commit Message",
                     "value": "${{ env.COMMIT_MESSAGE }}"
-                  },
-                  {
-                    "title": "GitHub Actions URL",
-                    "value": "${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
                   }
 	              ]
               }
