--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set sending info
         id: set_sending_info
         run: |
-          echo "::set-output name=COMMIT_MESSAGE::$(echo "${{ github.event.head_commit.message }}" | tr '\n' ' ')" >> $GITHUB_ENV
+          echo '::set-output name=COMMIT_MESSAGE::${{ github.event.head_commit.message }}'
 
       - name: Notification
         uses: tokorom/action-slack-incoming-webhook@main
