--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Set sending info
         id: set_sending_info
         run: |
+          echo ${{ github.event.head_commit.message }}
           echo '::set-output name=COMMIT_MESSAGE::${{ github.event.head_commit.message }}'
           echo '::set-output name=BRANCH::aaa'
 
