--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -16,17 +16,17 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-
       - name: Set sending info
         id: set_sending_info
         run: |
-          echo ${{ github.event.head_commit.message }}
-          echo '::set-output name=COMMIT_MESSAGE::${{ github.event.head_commit.message }}'
-          echo '::set-output name=BRANCH::aaa'
-          raw=$(git branch -r --contains ${{ github.ref }})
-          branch=${raw##*/}
-          echo "BRANCH_NAME=${branch}" >> ${GITHUB_ENV}
-          echo ${BRANCH_NAME}
+          echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+
+      - name: test
+				env:
+          RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
+        run: |
+          echo $RELEASE_VERSION
+          echo ${{ steps.vars.outputs.tag }}
 
       - name: Notification
         uses: tokorom/action-slack-incoming-webhook@main
