--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -1,4 +1,4 @@
-name: slack-notification
+name: dev-slack-notify
 
 on:
   pull_request:
@@ -25,6 +25,7 @@ jobs:
         env:
           RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
         run: |
+          echo $GITHUB_REF
           echo $RELEASE_VERSION
           echo ${{ steps.vars.outputs.tag }}
 
