--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -26,6 +26,7 @@ jobs:
           RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
         run: |
           echo $GITHUB_REF
+          echo ${GITHUB_REF} | awk -F / '{print $NF}'
           echo $RELEASE_VERSION
           echo ${{ steps.vars.outputs.tag }}
 
