--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           echo $GITHUB_REF
           echo ${GITHUB_REF} | awk -F / '{print $NF}'
+          echo "Running on pr: ${{ steps.branch-name.outputs.current_branch  }}"
           echo "Running on pr: ${{ steps.branch-name.outputs.head_ref_branch }}"
           echo $RELEASE_VERSION
           echo ${{ steps.vars.outputs.tag }}
