--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -28,6 +28,10 @@ jobs:
           echo ${GITHUB_REF} | awk -F / '{print $NF}'
           echo "Running on pr: ${{ steps.branch-name.outputs.current_branch  }}"
           echo "Running on pr: ${{ steps.branch-name.outputs.head_ref_branch }}"
+          raw=$(git branch -r --contains ${{ github.ref }})
+          echo $raw
+          branch=${raw/origin\/}
+          echo $branch
           echo $RELEASE_VERSION
           echo ${{ steps.vars.outputs.tag }}
 
