--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -28,15 +28,17 @@ jobs:
         run: |
           echo $GITHUB_REF
           echo ${GITHUB_REF} | awk -F / '{print $NF}'
-          tag=$(${GITHUB_REF} | awk -F / '{print $NF}')
-          echo $tag
+          tag=$(echo ${GITHUB_REF} | awk -F / '{print $NF}')
+          echo "tag: $tag"
           echo "Running on pr: ${{ steps.branch-name.outputs.current_branch  }}"
           echo "Running on pr: ${{ steps.branch-name.outputs.head_ref_branch }}"
+          echo "--------------------------"
           raw=$(git branch --contains ${{ github.ref }})
-          git branch --contains ${tag}
+          git branch --contains ${{ steps.branch-name.outputs.current_branch }}
           echo $raw
           branch=${raw/origin\/}
           echo $branch
+          echo "-----------------------------"
           echo $RELEASE_VERSION
           echo ${{ steps.vars.outputs.tag }}
 
