--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -31,7 +31,7 @@ jobs:
           tag=$(echo ${GITHUB_REF} | awk -F / '{print $NF}')
           echo "tag: $tag"
           echo "Running on pr: ${{ steps.branch-name.outputs.current_branch  }}"
-          echo "Running on pr: ${{ steps.branch-name.outputs.head_ref_branch }}"
+          echo "Running on pr: ${{ steps.branch-name.outputs.ref_branch }}"
           echo "--------------------------"
           raw=$(git branch --contains ${{ github.ref }})
           git branch --contains ${{ steps.branch-name.outputs.current_branch }}
